Don't pixel-snap the top and bottom of lines.

That might cause incorrect detection of overflow, since the height of
the block isn't pixel-snapped.

Bug: 818873
Change-Id: I864be9dfedf6f008fe19ce02088ac6488ec274d0
Reviewed-on: https://chromium-review.googlesource.com/954022
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542080}
Former-commit-id: 0e7d0d12eade3a80ef79e6c19a14bade77cc5b8e